--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -5,6 +5,14 @@
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
 
-<p>Esta aplicação gerencia vestibulares.</p>
+<p>Software Leader </p>
+<br>
+Como o nome mesmo diz, somos líder no mercado! quando se trata de inovação de softwares.
+Software Leader, ou propriamente dizendo Líder de Negócios está atuando no mercado fazem 10 anos
+trabalhamos com diversas ferramentas modernas. Procuramos sempre atender ao máximo nosso cliente, 
+sempre inovando e procurando ideias e soluções para seus problemas. Software Leader
+hoje lida com mais de 10 mil funcionários. Temos outras filiais localizadas em alguns pontos daqui do Brasil.. 
+
+
 
 {% endblock %}
