--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -5,7 +5,7 @@
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
 
-<p><b>Software Leader<b/></p>
+<p><b>Software Leader</b/></p>
 Como o nome mesmo diz, somos líder no mercado! quando se trata de inovação de softwares.
 Software Leader, ou propriamente dizendo Líder de Negócios está atuando no mercado fazem 10 anos
 trabalhamos com diversas ferramentas modernas. Procuramos sempre atender ao máximo nosso cliente, 
