--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Gerenciador de vestibulares</h1>
-    <p class="lead">Gerencie seus vestibulares.</p>
+    <h1>Software Leader</h1>
+    <p class="lead">Especialista em criação de Softwares Inovadores</p>
     <!--<p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
 </div>
 
