--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Software Leader</h1>
-    <p class="lead">Especialista em criação de Softwares Inovadores</p>
+    <p class="lead">Especialista em criação de Softwares Inovadores!</p>
     <!--<p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
 </div>
 
