--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -14,7 +14,7 @@
 
 <address>
     <strong>Suporte:</strong>   <a href="softwareleader@suporte.com.br</a><br />
-    <strong>Marketing:</strong> <a href="softwareleader@leader.com.br</a>
+    <strong>Suporte:</strong>   <a href="softwareleader@leader.com.br</a><br />
 </address>
 
 {% endblock %}
