--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -13,8 +13,8 @@
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="softwareleader@suporte.com.br</a><br />
-    <strong>Suporte:</strong>   <a href="softwareleader@leader.com.br</a><br />
+    <strong>Suporte: softwareleader@suporte.com.br</strong>  
+    <strong>Suporte: softwareleader@leader.com.br</strong>   
 </address>
 
 {% endblock %}
