--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -13,8 +13,8 @@
 </address>
 
 <address>
-    <strong>Suporte: softwareleader@suporte.com.br</strong>  
-    <strong>Suporte: softwareleader@leader.com.br</strong>   
+    <strong>Suporte: softwareleader@suporte.com.br</strong><Br>  
+    <strong>Contato: softwareleader@leader.com.br</strong>   
 </address>
 
 {% endblock %}
