--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -8,7 +8,7 @@
 <address>
     Empresa Software Leader<br />
     Rua Haddock Lobo, 608 - Próximo ao metrô consolação<br />
-    <abbr title="Telefone">Telefone:</abbr>
+    <abbr>Telefone:</abbr>
     4002-4822 / 96679-7856
 </address>
 
