--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -7,7 +7,7 @@
 
 <p><b>Software Leader</b/></p>
 Como o nome mesmo diz, somos líder no mercado! quando se trata de inovação de softwares.<br>
-Software Leader, ou propriamente dizendo Líder de Negócios está atuando no mercado fazem 10 anos
+Software Leader, ou propriamente dizendo Líder de Negócios está atuando no mercado fazem 10 anos<br>
 trabalhamos com diversas ferramentas modernas. Procuramos sempre atender ao máximo nosso cliente,<br>
 sempre inovando e procurando ideias e soluções para seus problemas. Software Leader
 hoje lida com mais de 10 mil funcionários, estamos sempre
