--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -9,9 +9,20 @@
 Como o nome mesmo diz, somos líder no mercado! quando se trata de inovação de softwares.<br>
 Software Leader, ou propriamente dizendo Líder de Negócios está atuando no mercado fazem 10 anos<br>
 trabalhamos com diversas ferramentas modernas. Procuramos sempre atender ao máximo nosso cliente,<br>
-sempre inovando e procurando ideias e soluções para seus problemas. Software Leader
-hoje lida com mais de 10 mil funcionários, estamos sempre
-  Temos outras filiais localizadas em alguns pontos daqui do Brasil.. 
+sempre inovando e procurando ideias e soluções para seus problemas. Software Leader hoje lida com mais de 10 mil funcionários, 
+estamos sempre dando apoio ao máximo para o funcionário. Temos espaços reservados para práticas de esportes,<br>
+leituras, zumba e até mesmo dança! Priorizamos o máximo do bem-estar do nosso funcionário. Para enfim,<br> 
+alcançarmos uma ótima aplicalçao/softwares e uma excelente posição no mercado.<br>
+<p>Temos outras filiais localizadas em alguns pontos daqui do Brasil.</p><br>
+Estamos localizado no Paraná, Rio de Janeiro, Santa Catarina, Rondônia, Ceará, Piauí e Bahia.<br>
+
+Missão: Gerar Softwares com qualidade e que atenda todas as necessidades do cliente.
+
+Valores: -Credibilidade<br>
+-Confiabialidade<br>
+-Comprometimento<br>
+
+Visão: Abrir mais filiais pelo mundo e ter mais reconhecimento!<br>
 
 
 
