--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -16,13 +16,13 @@ alcançarmos uma ótima aplicalçao/softwares e uma excelente posição no merca
 <p>Temos outras filiais localizadas em alguns pontos daqui do Brasil.</p><br>
 Estamos localizado no Paraná, Rio de Janeiro, Santa Catarina, Rondônia, Ceará, Piauí e Bahia.<br>
 
-Missão: Gerar Softwares com qualidade e que atenda todas as necessidades do cliente.
+<b>Missão:</b> Gerar Softwares com qualidade e que atenda todas as necessidades do cliente.<br>
 
-Valores: -Credibilidade<br>
+<b>Valores:</b> -Credibilidade<br>
 -Confiabialidade<br>
 -Comprometimento<br>
 
-Visão: Abrir mais filiais pelo mundo e ter mais reconhecimento!<br>
+<b>Visão:</b> Abrir mais filiais pelo mundo e ter mais reconhecimento!<br>
 
 
 
