--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -18,7 +18,8 @@ Estamos localizado no Paraná, Rio de Janeiro, Santa Catarina, Rondônia, Ceará
 
 <b>Missão:</b> Gerar Softwares com qualidade e que atenda todas as necessidades do cliente.<br>
 
-<b>Valores:</b> -Credibilidade<br>
+<b>Valores:</b><br>
+-Credibilidade<br>
 -Confiabialidade<br>
 -Comprometimento<br>
 
