--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -13,8 +13,8 @@ sempre inovando e procurando ideias e soluções para seus problemas. Software L
 mais de 10 mil funcionários, estamos sempre dando apoio ao máximo para o funcionário. Temos espaços<br> 
 reservados para práticas de esportes, leituras, zumba e até mesmo dança! Priorizamos o máximo do bem-estar<br> 
 do nosso funcionário. Para enfim, alcançarmos uma ótima aplicalçao/softwares e uma excelente posição no mercado.<br>
-<p>Temos outras filiais localizadas em alguns pontos daqui do Brasil.</p><br>
-Estamos localizado no Paraná, Rio de Janeiro, Santa Catarina, Rondônia, Ceará, Piauí e Bahia.<br>
+<p>Temos outras filiais localizadas em alguns pontos daqui do Brasil. Temos filiais</p><br>
+localizada no Paraná, Rio de Janeiro, Santa Catarina, Rondônia, Ceará, Piauí e Bahia.<br>
 <br>
 <b>Missão:</b> Gerar Softwares com qualidade e que atenda todas as necessidades do cliente.<br>
 <br>
